--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "defaultInput" : "string",
     "defaultFinder": "ocr",
-    "defaultExtractor" : "ocr"
+    "defaultExtractor" : "ocr",
+    "pluginsPath" : null
 }
