--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "get framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/aceunlonely/xget#readme",
   "dependencies": {
     "peeriocjs": "^2.4.1"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
