--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "defaultInput" : "string",
     "defaultFinder": "ocr",
     "defaultExtractor" : "ocr",
-    "pluginsPath" : null
+    "pluginsPath" : null,
+    "verbose" : false
 }
