--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/aceunlonely/xget#readme",
   "dependencies": {
+    "lustjson.js": "0.0.1",
     "peeriocjs": "^2.4.1"
   },
   "devDependencies": {
